--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <nav class="wsmenu clearfix">
         <div class="overlapblackbg"></div>
         <ul class="wsmenu-list">
-          <li aria-haspopup="true" class="rightmenu hidden-xs">
+          <li class="rightmenu hidden-xs">
             <div class="cart-icon align-items-center d-flex mr-0">
               <img src="static/img/icon-cart.png" class="mr-2">
               <span>(0)</span>
             </div>
           </li>
-          <li aria-haspopup="true" class="rightmenu hidden-xs">
+          <li class="rightmenu hidden-xs">
             <div class="user-icon align-items-center d-flex">
               <img src="static/img/icon-user.png" class="mr-2">
               <span>CONNEXION</span>
@@ -53,7 +53,7 @@
               <li aria-haspopup="true"><a href="#"><i class="fa fa-angle-right"></i>Signout</a></li>
             </ul>
           </li>
-          <li aria-haspopup="true" class="rightmenu mr-4 hidden-xs">
+          <li class="rightmenu mr-4 hidden-xs">
             <form class="searchbox">
                 <input type="search" placeholder="Rechercher......" name="search" class="searchbox-input" onkeyup="buttonUp();">
                 <button type="submit" class="searchbox-submit"><i class="ion-ios-search"></i></button>
@@ -113,7 +113,7 @@
           <li>
             <a>Contact</a>
           </li>
-          <li aria-haspopup="true" class="sml-connection">
+          <li class="sml-connection">
             <a class="sign-out-btn">
               <img src="static/img/icon-user.png" class="mr-2">
               <span>CONNEXION</span>
@@ -134,7 +134,7 @@
           <h1 class="text-uppercase">Nouveautes</h1>
         </div>
       </div>
-      <div class="swiper-slide" style="background-image: url(static/img/banner-2.jpg); background-position: 50% 100%;"> 
+      <div class="swiper-slide" style="background-image: url(static/img/banner-2.jpg);"> 
         <div class="item">
           <h1 class="text-uppercase">Lookbooks</h1>
         </div>
