--- a/index.html
+++ b/index.html
@@ -75,11 +75,16 @@
             <div class="wsmegamenu clearfix">
               <div class="container">
                 <div class="row justify-content-center">
-                  <div class="col-lg-3 col-md-12 col-xs-12 link-list">
-                    <img src="static/img/1.jpg" alt="" class="img-fluid">
+                  <div class="col-lg-3 col-md-12 col-xs-12 link-list nav-imgs" data-imggrp="1">
+                    <div style="background-image: url(static/img/1.jpg)" class="show"></div>
+                    <div style="background-image: url(static/img/2.jpg)"></div>
+                    <div style="background-image: url(static/img/3.jpg)"></div>
+                    <div style="background-image: url(static/img/4.jpg)"></div>
+                    <div style="background-image: url(static/img/5.jpg)"></div>
+                    <div style="background-image: url(static/img/6.jpg)"></div>                    
                   </div>
                   <div class="col-lg-3 col-md-12 col-xs-12 link-list">
-                    <ul class="flex-column h-100 justify-content-center nav">
+                    <ul class="flex-column h-100 justify-content-center nav main-nav" data-imggrp="1">
                       <li class="nav-item">
                         <a class="nav-link active" href="#">Nouvelle collection</a>
                       </li>
